--- a/docs/stylesheets/g-theme.css
+++ b/docs/stylesheets/g-theme.css
@@ -15,8 +15,14 @@
         --md-accent-fg-color: #CECCD2;
 }
 
+/* Link colours */
 a {
-        color: var(--md-primary-bg-color);
+        color: var(--md-accent-fg-color) !important;
+}
+
+a:hover {
+        color: var(--md-primary-bg-color) !important;
+        text-decoration: none !important;
 }
 
 /* Remove the shadow under the header */
