Add analytics and make text smaller.

--- a/docs/stylesheets/g-theme.css
+++ b/docs/stylesheets/g-theme.css
@@ -25,6 +25,11 @@ a:hover {
         text-decoration: none !important;
 }
 
+/* Paragraph font-size */
+.md-typeset {
+        font-size: .7rem;
+}
+
 /* Remove the shadow under the header */
 .md-header--shadow {
         box-shadow: none;
