--- a/site/stylesheets/g-theme.css
+++ b/site/stylesheets/g-theme.css
@@ -1,5 +1,85 @@
+/* Change the colours of the root colour scheme */
 :root {
         --md-primary-fg-color: #FAF9F6;
         --md-primary-fg-color--light: #FAF9F6;
         --md-primary-fg-color--dark: #323036;
+        --md-primary-bg-color: #828089;
+        --md-footer-bg-color: #FFFF;
+}
+
+/* Edit teh indigo accent colour scheme (no grey colour scheme) */
+[data-md-color-accent=indigo] {
+        --md-primary-fg-color: #FAF9F6;
+        --md-primary-fg-color--light: var(--md-primary-bg-color);
+        --md-primary-fg-color--dark: var(--md-primary-fg-color--dark);
+        --md-accent-fg-color: #CECCD2;
+}
+
+/* Link colours */
+a {
+        color: var(--md-primary-bg-color) !important;
+}
+
+a:hover {
+        color: var(--md-accent-fg-color) !important;
+        text-decoration: none !important;
+}
+
+/* Paragraph font-size */
+.md-typeset {
+        font-size: .7rem;
+}
+
+/* Remove the shadow under the header */
+.md-header--shadow {
+        box-shadow: none;
+}
+
+/* Make the logo in the header larger */
+.md-header__button.md-logo img,
+.md-header__button.md-logo svg {
+        height: 2.5rem;
+}
+
+/* Do not display the site title in the header */
+.md-header__topic:first-child {
+        display: none;
+}
+
+/* Use dark colour for the navigation links */
+.md-typeset a,
+.md-nav__item .md-nav__link--active {
+        color: var(--md-primary-fg-color--dark);
+}
+
+/* Underline links in text on hover an focus */
+.md-typeset a:focus,
+.md-typeset a:hover {
+        text-decoration: underline;
+}
+
+/* Change the colour of links on hover and focus */
+.md-nav__link:focus,
+.md-nav__link:hover,
+.md-typeset .headerlink:focus,
+.md-typeset .headerlink:hover,
+.md-typeset :target>.headerlink {
+        color: var(--md-primary-bg-color);
+}
+
+html .md-footer-meta.md-typeset a,
+.md-copyright__highlight {
+        color: var(--md-primary-bg-color);
+}
+
+html .md-footer-meta.md-typeset a:hover,
+html .md-footer-meta.md-typeset a:focus {
+        color: var(--md-primary-fg-color--dark);
+}
+
+/* Make the footer background white and the content dark */
+.md-footer,
+.md-footer-meta {
+        background-color: white;
+        color: var(--md-primary-bg-color);
 }
