--- a/docs/stylesheets/g-theme.css
+++ b/docs/stylesheets/g-theme.css
@@ -4,15 +4,21 @@
         --md-primary-fg-color--light: #FAF9F6;
         --md-primary-fg-color--dark: #323036;
         --md-primary-bg-color: #828089;
-        --md-footer-bg-color: #FFFF;
+        --md-footer-bg-color: #FAF9F6;
 }
 
-/* Edit teh indigo accent colour scheme (no grey colour scheme) */
+/* Edit the indigo accent colour scheme (no grey colour scheme) */
 [data-md-color-accent=indigo] {
         --md-primary-fg-color: #FAF9F6;
         --md-primary-fg-color--light: var(--md-primary-bg-color);
         --md-primary-fg-color--dark: var(--md-primary-fg-color--dark);
         --md-accent-fg-color: #CECCD2;
+}
+
+/* Body background colour */
+
+body {
+        background: var(--md-primary-fg-color)
 }
 
 /* Link colours */
@@ -23,6 +29,20 @@ a {
 a:hover {
         color: var(--md-accent-fg-color) !important;
         text-decoration: none !important;
+}
+
+/* Bold headings */
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+        font-weight: bold !important;
+}
+
+h1 {
+        color: var(--md-primary-fg-color--dark) !important
 }
 
 /* Paragraph font-size */
@@ -80,6 +100,6 @@ html .md-footer-meta.md-typeset a:focus {
 /* Make the footer background white and the content dark */
 .md-footer,
 .md-footer-meta {
-        background-color: white;
+        background-color: var(--md-primary-fg-color);
         color: var(--md-primary-bg-color);
 }
