--- a/docs/stylesheets/g-theme.css
+++ b/docs/stylesheets/g-theme.css
@@ -5,6 +5,11 @@
         --md-primary-fg-color--dark: #323036;
         --md-primary-bg-color: #828089;
         --md-footer-bg-color: #FAF9F6;
+        --md-default-bg-color: #FAF9F6;
+}
+
+[data-md-color-scheme=default] {
+        --md-default-bg-color: #FAF9F6;
 }
 
 /* Edit the indigo accent colour scheme (no grey colour scheme) */
