--- a/site/stylesheets/g-theme.css
+++ b/site/stylesheets/g-theme.css
@@ -120,8 +120,8 @@ html .md-footer-meta.md-typeset a:focus {
         background-color: var(--md-accent-fg-color);
 }
 
-/* Hide stars and forks in git sectioon */
-.md-source__fact .md-source__fact--stars,
-.md-source__fact .md-source__fact--forks {
-        display: none;
+/* Hide stars and forks in git section */
+li.md-source__fact.md-source__fact--stars,
+li.md-source__fact.md-source__fact--forks {
+        display: none !important;
 }
